@@ -2,7 +2,12 @@
 
 set -e
 
-today=$(date +%y%m%d)
+if [ $# -eq 0 ]
+  then
+    today=$(date +%y%m%d)
+  else
+    today=$1
+fi
 
-docker build -t "docker2.molflow.com/devops/qsmr_base:${today}" base/
+docker build -t "odinregistry.molflow.com/devops/qsmr_base:${today}" base/
 #docker push "docker2.molflow.com/devops/qsmr_base:${today}"
