@@ -1,3 +1,0 @@
-FROM docker2.molflow.com/devops/qsmr_base:170619
-
-COPY data /QsmrData
